Fix z-index van de verschillende panelen

--- a/webroot/css/sailing-dummy/boat.css
+++ b/webroot/css/sailing-dummy/boat.css
@@ -103,6 +103,7 @@
 	border-radius: 15px 0 0 15px;
 	padding: 2px 3px;
 	white-space: nowrap;
+	z-index: 3;
 }
 
 .boat-stats:after{
