--- a/webroot/css/sailing-dummy/course.css
+++ b/webroot/css/sailing-dummy/course.css
@@ -69,6 +69,7 @@
 	height: 1px; 
 	background-color: #fff;
 	opacity: 0.5;
+	z-index: 2;
 }
 
 /* tijdelijke laag om parcour weer te laten zien */
@@ -84,7 +85,7 @@
 }
 
 #bouy-container{
-	z-index: 3;
+	z-index: 2;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -134,6 +135,7 @@
     text-align: center;
     line-height: 19px;
     text-indent: 2px;
+    z-index: 2;
 
 	-webkit-box-shadow: inset 5px -5px 10px 0px rgba(0,0,0,0.4);
 	-moz-box-shadow: inset 5px -5px 10px 0px rgba(0,0,0,0.2);
