--- a/webroot/css/sailing-dummy/info-list.css
+++ b/webroot/css/sailing-dummy/info-list.css
@@ -68,6 +68,7 @@
 	white-space: nowrap;
 	border-radius:3px;
 	overflow: hidden;
+	z-index: 5;
 }
 
 .info-bar .label{
